--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -72,3 +72,9 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+
+.tbl {
+  border-bottom: 1px solid #565656;
+  border-collapse: collapse;
+}
